Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/forwardRef/TestEnum5.out
TestEnum5.java:15:20: compiler.err.illegal.enum.static.ref
1 error
